<resources>
    <string name="app_name">Calc</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="div">÷</string>
    <string name="mul">×</string>
    <string name="clear">C</string>
    <string name="sign">±</string>
    <string name="percent">%</string>
    <string name="clear_txt">clear</string>
    <string name="sign_txt">change sign</string>
    <string name="percent_txt">percent</string>
    <string name="div_txt">divide</string>
    <string name="mul_txt">multiply</string>
    <string name="sub_txt">subtract</string>
    <string name="sum_txt">add</string>
    <string name="division_by_zero_message">Division by zero is impossible</string>
</resources>
