<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calcSmallTxtViewId"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical|end"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/calcMainTxtView"
        android:layout_below="@id/calcSmallTxtViewId"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical|end"
        android:textSize="60sp" />

    <LinearLayout
        android:id="@+id/actionRowId"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/actionColumnId"
        android:layout_below="@id/calcMainTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBtn"
            android:text="@string/clear"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/signBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBtn"
            android:text="@string/sign"
            android:textSize="40sp" />

        <Button
            android:id="@+id/percentBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBtn"
            android:text="@string/percent"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topNumRowId"
        android:layout_alignParentStart="true"
        android:layout_below="@id/actionRowId"
        android:layout_toStartOf="@id/actionColumnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sevenBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/seven"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/eightBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/eight"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nineBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/nine"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondNumRowId"
        android:layout_alignParentStart="true"
        android:layout_below="@id/topNumRowId"
        android:layout_toStartOf="@id/actionColumnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fourBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/four"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/fiveBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/five"
            android:textSize="40sp" />

        <Button
            android:id="@+id/sixBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/six"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdNumRowId"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/actionColumnId"
        android:layout_below="@id/secondNumRowId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/oneBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/one"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/twoBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/two"
            android:textSize="40sp" />

        <Button
            android:id="@+id/threeBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/three"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomNumRowId"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/actionColumnId"
        android:layout_below="@id/thirdNumRowId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zeroBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/zero"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/dotBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNumBtn"
            android:text="@string/dot"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionColumnId"
        android:layout_below="@id/calcMainTxtView"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/divBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBtn"
            android:text="@string/div"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/mulBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBtn"
            android:text="@string/mul"
            android:textSize="40sp" />

        <Button
            android:id="@+id/subBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBtn"
            android:text="@string/sub"
            android:textSize="40sp" />

        <Button
            android:id="@+id/sumBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBtn"
            android:text="@string/sum"
            android:textSize="40sp" />

        <Button
            android:id="@+id/equalBtnId"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBtn"
            android:text="@string/equal"
            android:textSize="40sp" />
    </LinearLayout>

</RelativeLayout>